examples/mutable-objects/transcript.txt
/*
 * Copyright (C) 2007-2020 Artima, Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Automatically generated Scala interpreter transcript from:
 *
 * Programming in Scala (Fifth Edition)
 * by Martin Odersky, Lex Spoon, Bill Venners, and Frank Sommers
 *
 * http://booksites.artima.com/programming_in_scala_5ed
 */


scala>   class BankAccount:
       
           private var bal: Int = 0
       
           def balance: Int = bal
       
           def deposit(amount: Int): Unit =
             require(amount > 0)
             bal += amount
       
           def withdraw(amount: Int): Boolean = 
             if amount > bal then false
             else
               bal -= amount
               true

                          ^
       error: ';' expected but ':' found.
                    if amount > bal then false
                       ^
On line 12: error: '(' expected but identifier found.
                    if amount > bal then false
                                    ^
On line 12: warning: then is a reserved word (since 2.10.0); usage as an identifier is deprecated

scala>   import scala.compiletime.uninitialized
       
         class Thermometer:
       
           var celsius: Float = uninitialized
       
           def fahrenheit = celsius * 9 / 5 + 32
           def fahrenheit_=(f: Float) =
             celsius = (f - 32) * 5 / 9
       
           override def toString = s"${fahrenheit}F/${celsius}C"

                class Thermometer:
                                 ^
On line 3: error: ';' expected but ':' found.

